# avoid-obstacle-collision

./: .gitignore  CNN.ipynb  MLP.ipynb  README.md  Trabalho final.md  mlp.pkl  modelo_cnn.pth  ptxas  pyproject.toml  requirements.txt  summarize_dataset.py
controllers/: Action.py
controllers/cnn/: CNN.ipynb  NeuralNetwork.py  cnn_model.py  lvf.pth  models.py  train.py  train_cnn.py
controllers/cnn/cnn_dataset/: cnn_test.h5
controllers/coletor/: coletor.py
controllers/genetic/: Action.py  genetic.py  objetivo.md  rl.py  robot_env.py
controllers/genetic/__pycache__/: genetic._calculate_distance_jit-59.py312.1.nbc  genetic._calculate_distance_jit-59.py312.nbi
controllers/genetic/ppo_navigation_tensorboard/PPO_1/: events.out.tfevents.1751251988.arch.279067.0
controllers/genetic/ppo_navigation_tensorboard/PPO_10/: events.out.tfevents.1751254177.arch.351667.0
controllers/robot/: Action.py  Bayes.py  Infer.py  backup.bif  bayes_model  bayes_model.bif  bayes_model.xdsl  bayes_modelbif  constants.py  data_collection.py  dataset.py  mlp.pkl  mlp.py  mode_processing.py  model.py  modelo_cnn.pth  neural.py  robot.py  sensor_processing.py  train_cnn.py  val_cnn.py
controllers/robot/cnn/: NeuralNetwork.py  dataset.py  eval.py  models.py  visual.ipynb
controllers/robot/dados_treino/: labels.csv
plugins/robot_windows/overview/: overview.html
trab_final/: .IA-20251.wbproj  .IasA-20251.wbproj  IA-20251.wbt  IasA-20251.wbt  bayes.md
worlds/: .world.wbproj  world.wbproj
(+25 files in other folders)
