[project]
name = "ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "pgmpy>=1.0.0",
    "pillow>=11.3.0",
    "pyparsing>=3.2.3",
    "scipy==1.15.3",
]
